--- a/css/demon-guide.css
+++ b/css/demon-guide.css
@@ -64,6 +64,11 @@
   margin-top: 5px;
 }
 
+.DG-Active, .DG-CollapsibleButton:hover {
+  background-color: #777777;
+  color:white;
+}
+
 .DG-Demon {
   background-color: #F7F7F7;
   padding: 0 18px;
