Added AG Challenge Writeup to MiniGuides

--- a/css/demon-guide.css
+++ b/css/demon-guide.css
@@ -9,6 +9,9 @@
   background-color:#EAECF0;
   font-weight: bold;
 }
+.DG-AG-Challenge {
+  background-color:#EAECF0;
+}
 .DG-HomeButton {
   width:40px;
   height:40px;
